...
          ),
        }}
      />

      <FlatList
        ref={flatListRef}
        testID="message-list"
        data={allMessages}
        keyExtractor={(item) => item.id}
        scrollEnabled={!contextMenu}
        renderItem={({ item, index }) => {
          const isMine = item.senderId === userId;
          const { position, isLastInGroup } = getGroupInfo(index);
...
