...
          />
        }
      >
        <DotsProgress count={3} active={0} />

        <Input
          testID="name-input"
          value={name}
          onChangeText={setName}
          placeholder={t`Twoje imię`}
          label={t`Cześć! Jak masz na imię?`}
          autoCapitalize="words"
          maxLength={30}
...
